# hapypost

./: README.md  pyproject.toml
hapypost/: validate_duplicates.py
hapypost/io/: vfs_tables.py
hapypost/plotting/: common.py  environment.py  morphology.py
notebooks/: 01_qc_review.ipynb  02_validate_duplicates.ipynb  04_firstlook_science.ipynb  05_sample_overview_catalog_paper.ipynb  06_dwarf_galaxies.ipynb
scripts/: dwarf_galaxies.py  make_umap_region_inspection_pdf.py  make_visual_review.py  make_visual_review_umap_map.py  plot_morphology.py  plot_sample_overview.py
