[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hapypost"
version = "0.1.0"
description = "Post-processing and science analysis tools for HAPY"
authors = [
  {name = "Rose Finn"}
]
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "matplotlib",
  "astropy",
]

[tool.setuptools.packages.find]
include = ["hapypost*"]
exclude = ["notebooks*", "scripts*"]